--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: '/'
 
 author:
   name: 'Danielle Williams'
-  email: d.liza.williams11@gmail.com
+  email: danicodes94@gmail.com
   twitter_username: dannicodes
   github_username:  danicodes
   linkedin_username:  danicodes
