--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: '/'
 author:
   name: 'Danielle Williams'
   email: danicodes94@gmail.com
-  twitter_username: dannicodes
+  twitter_username: dani_codes
   github_username:  danicodes
   linkedin_username:  danicodes
 
