--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ paginate: 10
 permalink: /:year/:title/
 markdown: kramdown
 highlighter: rouge
+future: true
 
 kramdown:
   # use Github Flavored Markdown
