--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,17 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno'
+title: danicodes
+description: 'discovering cool things by experimenting with machine learning'
+url: 'http://danicodes.github.io'
+baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Danielle Williams'
+  email: danicodes94@gmail.com
+  twitter_username: dani_codes
+  github_username:  danicodes
+  linkedin_username:  danicodes
 
 defaults:
   -
