About me, description update

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: danicodes
-description: 'discovering cool things by experimenting with machine learning'
+description: 'experimenting with programming and making cool things'
 url: 'http://danicodes.github.io/'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
