Update astro.yml: resolve-dep-from-path --> false
Requires resolve-dep-from-path to be false for monorepo

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -4,6 +4,9 @@
 #
 name: Deploy Astro site to Pages
 
+variables:
+  resolve-dep-from-path: false
+
 on:
   # Runs on pushes targeting the default branch
   push:
